--- a/Jade-1-Amber/gtk-3.0/colCommonDark.css
+++ b/Jade-1-Amber/gtk-3.0/colCommonDark.css
@@ -5,80 +5,6 @@
 ************************************************************************************************* */
 
 
-/* ****************************** A C C E N T   C O L O U R S *********************************** */
-
-@define-color    theme_accent_color                    #b56400;
-
-@define-color    theme_selected_bg_color               @theme_accent_color;
-@define-color    theme_selected_fg_color               #ffffff;
-@define-color    theme_unfocused_selected_bg_color     @theme_accent_color;
-
-/* sidebar colours */
-@define-color    sidebar_bg                            #704100;
-@define-color    sidebar_hovering                      #808080;
-@define-color    sidebar_fg                            #ffffff;
-
-@define-color    theme_fg_color_sel                    #dc6800;
-
-/* view */
-@define-color    view_fg_sel                           #683307;
-@define-color    view_border_sel                       #dc6800;
-@define-color    view_bg_acceleditor                   #b56400;
-
-/* entry */
-@define-color    entry_border_act                      #683307;
-@define-color    entry_border_act_shad                 #b56400;
-@define-color    entry_tag_a                           #b95C00;
-@define-color    entry_tag_b                           #b65700;
-@define-color    entry_tag_c                           #b35500;
-@define-color    entry_tag_border                      #683307;
-
-/* buttons */
-@define-color    button_fg_sugg_color                  #f7f7f7;
-@define-color    button_bg_sugg_a                      #d46922;
-@define-color    button_bg_sugg_b                      #b35915;
-@define-color    button_bg_sugg_c                      #a64609;
-@define-color    button_bg_sugg_a_hov                  #e77325;
-@define-color    button_bg_sugg_b_hov                  #c76318;
-@define-color    button_bg_sugg_c_hov                  #b05415;
-@define-color    button_bg_sugg_a_act                  #d96300;
-@define-color    button_bg_sugg_b_act                  #dc6800;
-@define-color    button_bg_sugg_c_act                  #df6f00;
-@define-color    button_bg_sugg_flt                    #dc6800;
-@define-color    button_border_sugg                    #683307;
-
-/* progress bar */
-@define-color    prgbar_bg_a                           #b46d16;
-@define-color    prgbar_bg_b                           #ae6019;
-@define-color    prgbar_trough                         #101010;
-@define-color    prgbar_trough_a                       #202020;
-@define-color    prgbar_trough_b                       #303030;
-@define-color    prgbar_border                         #303030;
-
-/* scale slider */
-@define-color    slider_bg_a                           @theme_accent_color;
-@define-color    slider_bg_b                           @theme_accent_color;
-@define-color    slider_bdr                            @theme_accent_color;
-@define-color    slider_fg_shadow                      @shadow_color;
-@define-color    slider_bg_a_hov                       #ff9e00;
-@define-color    slider_bg_b_hov                       #ff9e00;
-@define-color    slider_bdr_hov                        #ff9e00;
-@define-color    slider_bg_act                         #ff9e00;
-
-/* infobar */
-@define-color    infobar_bg_a                          #c06500;
-@define-color    infobar_bg_b                          #8b4900;
-@define-color    infobar_border                        #543800;
-@define-color    infobar_button_fg                     #f7f7f7;
-@define-color    infobar_button_fg_dis                 #dd8800;
-@define-color    infobar_button_bg_a                   #c06500;
-@define-color    infobar_button_bg_b                   #8b4900;
-@define-color    infobar_button_bg_act_a               #8b4900;
-@define-color    infobar_button_bg_act_b               #c06500;
-@define-color    infobar_button_border                 #683307;
-
-@define-color    terminal_fg                           #729FCF;
-
 /* ****************************** C O M M O N   C O L O U R S *********************************** */
 
 /* text widgets and the like base background color */
@@ -91,7 +17,6 @@
 @define-color    theme_bg_color_hov                    #50595c;
 @define-color    theme_bg_color_from                   #454c4c;
 @define-color    theme_bg_color_to                     #2d3232;
-@define-color    popover                               #384248;
 @define-color    shadow_color                          #000000;
 
 /* widget text/foreground color */
@@ -132,9 +57,9 @@
 /* entry */
 @define-color    entry_fg_color                        #ffffff;
 @define-color    entry_fg_dis                          #858786;
-@define-color    entry_bg_a                            #445053;
-@define-color    entry_bg_b                            #475157;
-@define-color    entry_bg_c                            #495259;
+@define-color    entry_bg_a                            #505860;
+@define-color    entry_bg_b                            #505860;
+@define-color    entry_bg_c                            #505860;
 @define-color    entry_bg_under_a                      #FFFFFF;
 @define-color    entry_bg_under_b                      #000000;
 @define-color    entry_bg_shadow                       @shadow_color;
@@ -143,9 +68,9 @@
 
 @define-color    titleentry_fg_color                   #ffffff;
 @define-color    titleentry_fg_dis                     #858786;
-@define-color    titleentry_bg_a                       #555758;
+@define-color    titleentry_bg_a                       #575a5b;
 @define-color    titleentry_bg_b                       #575a5b;
-@define-color    titleentry_bg_c                       #606566;
+@define-color    titleentry_bg_c                       #575a5b;
 @define-color    titleentry_bg_under_a                 #FFFFFF;
 @define-color    titleentry_bg_under_b                 #000000;
 @define-color    titleentry_bg_shadow                  @shadow_color;
@@ -226,18 +151,26 @@
 @define-color    button_bgcirc_b_hov                   #30363c;
 @define-color    button_bgcirc_c_hov                   #191f23;
 
+@define-color    selected_bg_color                     #646e73;
+@define-color    selected_fg_color                     #ffffff;
+@define-color    selected_border_color                 #96a0aa;
+
 /* menus and menubars */
 @define-color    menu_bg                               @popover;
 @define-color    menu_bg_hover                         #4b5254;
-@define-color    menu_bdr                              #373b3d;
+@define-color    menu_bdr                              #000000;
 @define-color    menu_arr                              #373b3d;
 @define-color    menu_arr_dis                          #282d2f;
 @define-color    menuitem_fg_normal                    #CFCFCF;
 @define-color    menuitem_fg_hover                     #FFFFFF;
 @define-color    menuitem_bg_hover                     @theme_accent_color;
 @define-color    menuitem_fg_dis                       #566164;
-@define-color    menuitem_separator                    #1b1f20;
+@define-color    menuitem_separator_a                  #1b1f20;
+@define-color    menuitem_separator_b                  #60686D;
 @define-color    headermenu_bg_hover                   #4b5254;
+@define-color    popover                               #384248;
+@define-color    popover_separator_a                   #1b1f20;
+@define-color    popover_separator_b                   #60686D;
 
 @define-color    panel_bg                              #384248;
 @define-color    panel_bg_hov                          #515757;
@@ -245,8 +178,6 @@
 
 /* scale */
 @define-color    scale_trough_b                        @theme_bg_color;
-@define-color    scale_fill_a                          shade(@theme_selected_bg_color, 1.1);
-@define-color    scale_fill_b                          shade(@theme_selected_bg_color, 0.94);
 
 /* notebook */
 @define-color    notebook_bg                           #3c464c;
@@ -274,8 +205,9 @@
 
 /* row */
 @define-color    row_bg                                #202a2f;
-@define-color    row_bg_hover                          #232e33;
+@define-color    row_bg_hover                          #273237;
 @define-color    row_bg_active                         @theme_accent_color;
+@define-color    row_fg                                @theme_fg_color;
 @define-color    row_fg_dis                            #566164;
 
 /* hdyview */
@@ -328,6 +260,13 @@
 
 /* ************************** N O T I F I C A T I O N   C O L O U R S *************************** */
 
+@define-color    errorbar_bg_a                         #af261a;
+@define-color    errorbar_bg_b                         #af261a;
+@define-color    errorbar_button_fg_dis                #c0a080;
+@define-color    warnbar_bg_a                          #9e5800;
+@define-color    warnbar_bg_b                          #9e5800;
+@define-color    warnbar_button_fg_dis                 #c0a080;
+
 @define-color    error_text_color                      #cc0000;
 @define-color    error_border_color                    #cc0000;
 @define-color    error_background_color                #cc0000;
@@ -363,4 +302,3 @@ read if you used those and something break with a version upgrade you're on your
 @define-color    success_color                         #00cc66;
 @define-color    warning_color                         #F27835;
 @define-color    error_color                           #FC4138;
-
