--- a/Jade-1-Aqua/gtk-3.0/colCommon.css
+++ b/Jade-1-Aqua/gtk-3.0/colCommon.css
@@ -5,81 +5,6 @@
 ************************************************************************************************* */
 
 
-/* ****************************** A C C E N T   C O L O U R S *********************************** */
-
-@define-color    theme_accent_color                    #4aa0d1;
-
-@define-color    theme_selected_bg_color               @theme_accent_color;
-@define-color    theme_selected_fg_color               #ffffff;
-@define-color    theme_unfocused_selected_bg_color     @theme_accent_color;
-
-/* sidebar colours */
-@define-color    sidebar_bg                            #384147;
-@define-color    sidebar_hovering                      #999999;
-@define-color    sidebar_fg                            #ffffff;
-
-@define-color    theme_fg_color_sel                    #4492d3;
-
-/* view */
-@define-color    view_fg_sel                           #264b7c;
-@define-color    view_border_sel                       #2772b3;
-@define-color    view_bg_acceleditor                   #3c7fe8;
-
-/* entry */
-@define-color    entry_border_act                      #47a2f2;
-@define-color    entry_border_act_shad                 #61b5ff;
-@define-color    entry_tag_a                           #138ddf;
-@define-color    entry_tag_b                           #1387dc;
-@define-color    entry_tag_c                           #1385da;
-@define-color    entry_tag_border                      #1160c6;
-
-/* buttons */
-@define-color    button_fg_sugg_color                  #f7f7f7;
-@define-color    button_bg_sugg_a                      #4792c9;
-@define-color    button_bg_sugg_b                      #3887c1;
-@define-color    button_bg_sugg_c                      #347eb4;
-@define-color    button_bg_sugg_a_hov                  #519bd3;
-@define-color    button_bg_sugg_b_hov                  #4792c9;
-@define-color    button_bg_sugg_c_hov                  #347eb4;
-@define-color    button_bg_sugg_a_act                  #21649a;
-@define-color    button_bg_sugg_b_act                  #2576b5;
-@define-color    button_bg_sugg_c_act                  #2686d5;
-@define-color    button_bg_sugg_flt                    #3887c1;
-@define-color    button_border_sugg                    #1c638e;
-@define-color    button_fg_sugg_shadow                 #000000;
-
-/* progress bar */
-@define-color    prgbar_bg_a                           #56a4da;
-@define-color    prgbar_bg_b                           #23a7de;
-@define-color    prgbar_trough                         #969696;
-@define-color    prgbar_trough_a                       #eeeeee;
-@define-color    prgbar_trough_b                       #ffffff;
-@define-color    prgbar_border                         #606060;
-
-/* scale slider */
-@define-color    slider_bg_a                           @theme_accent_color;
-@define-color    slider_bg_b                           @theme_accent_color;
-@define-color    slider_bdr                            @theme_accent_color;
-@define-color    slider_fg_shadow                      @shadow_color;
-@define-color    slider_bg_a_hov                       #4abcff;
-@define-color    slider_bg_b_hov                       #4abcff;
-@define-color    slider_bdr_hov                        #4abcff;
-@define-color    slider_bg_act                         #4abcff;
-
-/* infobar */
-@define-color    infobar_bg_a                          #2d94d6;
-@define-color    infobar_bg_b                          #2273ae;
-@define-color    infobar_border                        #004979;
-@define-color    infobar_button_fg                     #f7f7f7;
-@define-color    infobar_button_fg_dis                 #3e87cd;
-@define-color    infobar_button_bg_a                   #2d94d6;
-@define-color    infobar_button_bg_b                   #2273ae;
-@define-color    infobar_button_bg_act_a               #2273ae;
-@define-color    infobar_button_bg_act_b               #2d94d6;
-@define-color    infobar_button_border                 #1c638e;
-
-@define-color    terminal_fg                           #729FCF;
-
 /* ****************************** C O M M O N   C O L O U R S *********************************** */
 
 /* text widgets and the like base background color */
@@ -88,11 +13,10 @@
 @define-color    box_shadow                            #ffffff;   
 
 /* widget background color */
-@define-color    theme_bg_color                        #c9c9c9;
+@define-color    theme_bg_color                        #d5d5d5;
 @define-color    theme_bg_color_hov                    #b0b0b0;
 @define-color    theme_bg_color_from                   #454c4c;
 @define-color    theme_bg_color_to                     #2d3232;
-@define-color    popover                               @theme_bg_color;
 @define-color    shadow_color                          #cccccc;
 
 /* widget text/foreground color */
@@ -104,17 +28,17 @@
 @define-color    inline_bg                             #dedede;
 
 /* sidebar colours */
-@define-color    assistant_sidebar_bg                  #3e4243;
-@define-color    assistant_sidebar_bg_lbl              #5fa24a;
-@define-color    assistant_sidebar_fg                  #ffffff;
+@define-color    assistant_sidebar_bg                  @sidebar_bg;
+@define-color    assistant_sidebar_bg_lbl              #585d5e;
+@define-color    assistant_sidebar_fg                  @sidebar_fg;
 
 /* view */
-@define-color    view_bg                               #f3f3f3;
-@define-color    view_bg_hover                         #e0e0e0;
+@define-color    view_bg                               #e9e9e9;
+@define-color    view_bg_hover                         #000000;
 @define-color    view_fg                               #212121;
 @define-color    view_fg_dis                           #566164;
 @define-color    view_fg_hov                           #212121;
-@define-color    view_border                           #969696;
+@define-color    view_border                           #0000ff;
 @define-color    view_hdr_border                       #c5c5c5;
 
 @define-color    tooltip_fg                            #f7f7f7;
@@ -123,6 +47,12 @@
 @define-color    header_separator                      #1b1f20;
 @define-color    notebook_separator                    #969696;
 @define-color    border_box                            #969696;
+
+/* progress bar */
+@define-color    prgbar_trough                         #969696;
+@define-color    prgbar_trough_a                       #eeeeee;
+@define-color    prgbar_trough_b                       #ffffff;
+@define-color    prgbar_border                         #606060;
 
 /* entry */
 @define-color    entry_fg_color                        #212121;
@@ -177,12 +107,14 @@
 @define-color    button_bg_a_act                       #8f8f8f;
 @define-color    button_bg_b_act                       #a1a1a1;
 @define-color    button_bg_c_act                       #aaaaaa;
+@define-color    button_bg_a_dis                       #d0d0d0;
+@define-color    button_bg_a_bkdrp                     #303639;
 @define-color    button_border                         #a9a9a9;
 
 @define-color    titlebutton_fg_color                  #ffffff;
 @define-color    titlebutton_fg_shadow                 #000000;
 @define-color    titlebutton_fg_dis                    #566164;
-@define-color    titlebutton_flat_bg                   #5b6464;
+@define-color    titlebutton_flat_bg                   #A4A5A6;
 @define-color    titlebutton_bg_a                      #263036;
 @define-color    titlebutton_bg_b                      #262c33;
 @define-color    titlebutton_bg_c                      #191f23;
@@ -211,16 +143,17 @@
 @define-color    button_bg_dis_a                       #DCDCDC;
 @define-color    button_bg_dis_b                       #e9e9e9;
 
-@define-color    button_bgcirc_a_hov                   #f6f6f6;
-@define-color    button_bgcirc_b_hov                   #d8d8d8;
-@define-color    button_bgcirc_c_hov                   #cecece;
-
 @define-color    button_fgcirc_shadow                  @shadow_color;
 @define-color    button_bgcirc_a                       #ececec;
 @define-color    button_bgcirc_b                       #d8d8d8;
 @define-color    button_bgcirc_c                       #cecece;
-@define-color    button_bgcirc_flt_a                   #969696;
-@define-color    button_bgcirc_flt_b                   #969696;
+@define-color    button_bgcirc_a_hov                   #f6f6f6;
+@define-color    button_bgcirc_b_hov                   #d8d8d8;
+@define-color    button_bgcirc_c_hov                   #cecece;
+
+@define-color    selected_bg_color                     #a0a6ac;
+@define-color    selected_fg_color                     #000000;
+@define-color    selected_border_color                 #90969c;
 
 /* menus and menubars */
 @define-color    menu_bg                               #384248;
@@ -232,7 +165,12 @@
 @define-color    menuitem_fg_hover                     #FFFFFF;
 @define-color    menuitem_bg_hover                     @theme_accent_color;
 @define-color    menuitem_fg_dis                       #566164;
-@define-color    menuitem_separator                    #1b1f20;
+@define-color    menuitem_separator_a                  #1b1f20;
+@define-color    menuitem_separator_b                  #60686D;
+@define-color    headermenu_bg_hover                   #4b5254;
+@define-color    popover                               @theme_bg_color;
+@define-color    popover_separator_a                   #97969b;
+@define-color    popover_separator_b                   #FFFFFF;
 
 @define-color    panel_bg                              #414747;
 @define-color    panel_bg_hov                          #515757;
@@ -240,8 +178,6 @@
 
 /* scale */
 @define-color    scale_trough_b                        @theme_bg_color;
-@define-color    scale_fill_a                          shade(@theme_selected_bg_color, 1.1);
-@define-color    scale_fill_b                          shade(@theme_selected_bg_color, 0.94);
 
 /* notebook */
 @define-color    notebook_bg                           #c8c9ca;
@@ -271,6 +207,7 @@
 @define-color    row_bg                                #dcdcdc;
 @define-color    row_bg_hover                          #cccccc;
 @define-color    row_bg_active                         @theme_accent_color;
+@define-color    row_fg                                @theme_fg_color;
 @define-color    row_fg_dis                            #566164;
 
 /* hdyview */
@@ -323,6 +260,13 @@
 
 /* ************************** N O T I F I C A T I O N   C O L O U R S *************************** */
 
+@define-color    errorbar_bg_a                         #ef212f;
+@define-color    errorbar_bg_b                         #9d0e15;
+@define-color    errorbar_button_fg_dis                #c0a080;
+@define-color    warnbar_bg_a                          #da8500;
+@define-color    warnbar_bg_b                          #bb6900;
+@define-color    warnbar_button_fg_dis                 #c0a080;
+
 @define-color    error_text_color                      #cc0000;
 @define-color    error_border_color                    #cc0000;
 @define-color    error_background_color                #cc0000;
@@ -358,4 +302,3 @@ read if you used those and something break with a version upgrade you're on your
 @define-color    success_color                         #00cc66;
 @define-color    warning_color                         #F27835;
 @define-color    error_color                           #FC4138;
-
