--- a/Jade-1-Teal/gtk-4.0/gtk-dark.css
+++ b/Jade-1-Teal/gtk-4.0/gtk-dark.css
@@ -1,4 +1,4 @@
-@import url("../gtk-3.0/colCommon.css");
+@import url("../gtk-3.0/colCommonDark.css");
 @import url("../gtk-3.0/colAccents.css");
 /* GTK NAMED COLORS
    ----------------
